Bug 679138: argv past script argument should not be interpreted as options. (r=dvander)